[project]
name = "viz"
version = "0.1.0"
description = "Local renderer for the visualization plugin: native diagram source to image files."
requires-python = ">=3.10"
dependencies = [
    "diagrams>=0.24",
    "mermaidx>=0.8",
]

[project.scripts]
viz = "vizlib.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vizlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
